<resources>
    <string name="app_name">iClub2.2</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <color name="white">#ffffff</color>

    <color name="whiteOne">#b0c5ec</color>
    <color name="textColor9a4274">#9a4274</color>
    <color name="textColor2f967a">#2f967a</color>
    <color name="textColorc979a8">#c979a8</color>
    <color name="textColor242424">#242424</color>
    <color name="textColor9373ee">#9373ee</color>
    <color name="layoutBackground">#eaecef</color>
    <color name="lineColor">#dddddd</color>
    <color name="editTextPromptColor">#d7d7d7</color>
    <color name="hunTextColor">#777778</color>
    <color name="redTextColor">#be0158</color>
    <color name="textColor0299fe">#0299fe</color>
    <color name="textColorf56f94">#f56f94</color>

    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_role_register">RoleRegisterActivity</string>
    <string name="title_activity_announcement">AnnouncementActivity</string>
    <string name="title_activity_detailed_information">DetailedInformationActivity</string>
    <string name="title_activity_mine_more">MineMoreActivity</string>
    <string name="title_activity_modification_psw">ModificationPswActivity</string>
    <string name="title_activity_feed_back">FeedBackActivity</string>
    <string name="title_activity_activity_apply">ActivityApplyActivity</string>
    <string name="title_activity_talents_deliver_message">TalentsDeliverMessageActivity</string>
    <string name="title_activity_merchant_job_particular">MerchantJobParticularActivity</string>
    <string name="title_activity_invite_message">InviteMessageActivity</string>
    <string name="title_activity_company_invite_message">CompanyInviteMessageActivity</string>
    <string name="title_activity_comment_grade">CommentGradeActivity</string>
    <string name="title_activity_nick_name">NickNameActivity</string>

    <string name="area">"1":"北京","2":"天津","3":"上海","4":"重庆","10":"保定","7":"秦皇岛","6":"唐山","5":"石家庄","15":"衡水","9":"邢台","8":"邯郸","13":"沧州","14":"廊坊","11":"张家口","12":"承德","21":"朔州","20":"晋城","19":"长治","22":"晋中","17":"大同","23":"运城","18":"阳泉","24":"忻州","25":"临汾","16":"太原","26":"吕梁","49":"花莲","48":"台东","45":"高雄","44":"台南","47":"澎湖","46":"屏东","35":"宜兰","36":"桃园","33":"嘉义","34":"台北","39":"台中","27":"台北","28":"高雄","37":"新竹","29":"基隆","38":"苗栗","30":"台中","42":"云林","41":"南投","32":"新竹","40":"彰化","31":"台南","59":"辽阳","58":"阜新","57":"营口","56":"锦州","55":"丹东","51":"大连","52":"鞍山","62":"朝阳","53":"抚顺","63":"葫芦岛","54":"本溪","60":"盘锦","61":"铁岭","50":"沈阳","67":"辽源","66":"四平","69":"白山","68":"通化","64":"长春","70":"松原","65":"吉林","71":"白城","72":"延边","79":"伊春","78":"大庆","77":"鸡西","82":"七台河","83":"黑河","80":"牡丹江","81":"佳木斯","73":"哈尔滨","74":"齐齐哈尔","75":"鹤岗","84":"绥化","85":"大兴安岭","76":"双鸭山","98":"宿迁","97":"泰州","96":"镇江","95":"扬州","94":"盐城","93":"淮安","92":"连云港","91":"南通","90":"苏州","86":"南京","87":"无锡","88":"徐州","89":"常州","109":"丽水","108":"台州","107":"舟山","106":"衢州","105":"金华","104":"绍兴","103":"湖州","102":"嘉兴","99":"杭州","101":"温州","100":"宁波","125":"池州","116":"铜陵","126":"宣城","117":"安庆","114":"马鞍山","115":"淮北","112":"蚌埠","121":"宿州","122":"巢湖","113":"淮南","123":"六安","110":"合肥","124":"亳州","111":"芜湖","118":"黄山","119":"滁州","120":"阜阳","134":"龙岩","135":"宁德","132":"漳州","127":"福州","133":"南平","128":"厦门","131":"泉州","129":"莆田","130":"三明","143":"吉安","144":"宜春","145":"抚州","146":"上饶","138":"萍乡","139":"九江","136":"南昌","137":"景德镇","140":"新余","142":"赣州","141":"鹰潭","147":"济南","148":"青岛","149":"淄博","159":"临沂","158":"莱芜","157":"日照","156":"威海","155":"泰安","154":"济宁","161":"聊城","152":"烟台","162":"滨州","153":"潍坊","163":"菏泽","150":"枣庄","151":"东营","160":"德州","179":"周口","178":"信阳","169":"鹤壁","177":"商丘","176":"南阳","166":"洛阳","165":"开封","168":"安阳","167":"平顶山","170":"新乡","180":"驻马店","171":"焦作","181":"济源","164":"郑州","174":"漯河","175":"三门峡","172":"濮阳","173":"许昌","195":"天门","188":"鄂州","194":"仙桃","187":"襄樊","197":"神农架","196":"潜江","189":"荆门","191":"黄冈","190":"孝感","193":"随州","192":"咸宁","182":"武汉","198":"恩施","183":"黄石","184":"十堰","185":"荆州","186":"宜昌","211":"娄底","202":"衡阳","212":"湘西","203":"邵阳","204":"岳阳","205":"常德","210":"怀化","200":"株洲","201":"湘潭","206":"张家界","207":"益阳","208":"郴州","209":"永州","199":"长沙","220":"湛江","221":"茂名","222":"肇庆","223":"惠州","215":"珠海","224":"梅州","225":"汕尾","216":"汕头","226":"河源","213":"广州","230":"中山","227":"阳江","214":"深圳","228":"清远","219":"江门","229":"东莞","217":"韶关","218":"佛山","232":"揭阳","231":"潮州","233":"云浮","240":"张掖","241":"平凉","239":"武威","245":"陇南","244":"定西","234":"兰州","243":"庆阳","242":"酒泉","236":"白银","235":"金昌","247":"甘南","238":"嘉峪关","246":"临夏","237":"天水","262":"达州","263":"雅安","250":"攀枝花","260":"宜宾","251":"泸州","261":"广安","252":"德阳","258":"南充","257":"乐山","268":"凉山","259":"眉山","267":"甘孜","249":"自贡","254":"广元","266":"阿坝","248":"成都","253":"绵阳","265":"资阳","256":"内江","264":"巴中","255":"遂宁","275":"黔西","276":"黔东","277":"黔南","270":"六盘水","269":"贵阳","272":"安顺","271":"遵义","274":"毕节","273":"铜仁","294":"保亭","281":"琼海","293":"陵水","280":"五指山","295":"琼中","290":"白沙","285":"东方","284":"万宁","292":"乐东","283":"文昌","291":"昌江","282":"儋州","288":"屯昌","289":"临高","286":"澄迈","278":"海口","287":"定安","279":"三亚","300":"昭通","302":"思茅","301":"丽江","304":"文山","303":"临沧","306":"西双版纳","305":"红河","308":"大理","296":"昆明","307":"楚雄","310":"怒江","311":"迪庆","309":"德宏","297":"曲靖","298":"玉溪","299":"保山","318":"玉树","319":"海西","316":"海南","317":"果洛","314":"海北","315":"黄南","312":"西宁","313":"海东","327":"榆林","328":"安康","329":"商洛","323":"咸阳","324":"渭南","325":"延安","326":"汉中","320":"西安","321":"铜川","322":"宝鸡","338":"玉林","339":"百色","332":"桂林","341":"河池","342":"来宾","333":"梧州","343":"崇左","330":"南宁","331":"柳州","336":"钦州","337":"贵港","334":"北海","335":"防城","340":"贺州","349":"阿里","344":"拉萨","345":"那曲","346":"昌都","350":"林芝","347":"山南","348":"日喀则","353":"吴忠","352":"石嘴山","355":"中卫","354":"固原","351":"银川","370":"阜康","371":"米泉","372":"博乐","373":"伊宁","361":"五家渠","362":"吐鲁番","360":"图木舒克","366":"和田","365":"哈密","364":"喀什","363":"阿克苏","375":"塔城","357":"克拉玛依","374":"奎屯","369":"昌吉","356":"乌鲁木齐","377":"阿勒泰","368":"库尔勒","359":"阿拉尔","376":"乌苏","358":"石河子","367":"阿图什","379":"包头","378":"呼和浩特","389":"阿拉善","388":"兴安","387":"锡林郭勒","386":"乌兰察布","385":"巴彦淖尔","383":"鄂尔多斯","384":"呼伦贝尔","381":"赤峰","382":"通辽","380":"乌海","390":"澳门","391":"香港"</string>
    <string name="title_activity_resume">ResumeActivity</string>

    <string name="city_name">"阿坝", "阿克苏", "阿拉尔", "阿拉善", "阿勒泰", "阿里", "安康", "安庆", "鞍山", "安顺", "安阳", "澳门", "阿图什", "白城", "百色", "白沙", "白山", "白银", "蚌埠", "保定", "宝鸡", "保山", "保亭", "包头", "巴彦淖尔", "巴中", "北海", "北京", "本溪", "毕节", "滨州", "博乐", "亳州", "沧州", "常德", "昌都", "昌吉", "昌江", "常州", "巢湖", "朝阳", "潮州", "承德", "成都", "澄迈", "郴州", "赤峰", "池州", "崇左", "楚雄", "滁州", "大理", "大连", "丹东", "儋州", "大庆", "大同", "大兴安岭", "达州", "德宏", "德阳", "德州", "定安", "定西", "迪庆", "东方", "东莞", "东营", "鄂尔多斯", "恩施", "鄂州", "防城", "佛山", "阜康", "抚顺", "阜新", "阜阳", "福州", "抚州", "甘南", "赣州", "甘孜", "高雄", "高雄", "广安", "广元", "广州", "贵港", "桂林", "贵阳", "果洛", "固原", "哈尔滨", "海北", "海东", "海口", "海南", "海西", "哈密", "邯郸", "杭州", "汉中", "鹤壁", "河池", "合肥", "鹤岗", "黑河", "衡水", "衡阳", "和田", "河源", "菏泽", "贺州", "红河", "淮安", "淮北", "怀化", "淮南", "花莲", "黄冈", "黄南", "黄山", "黄石", "呼和浩特", "惠州", "葫芦岛", "呼伦贝尔", "湖州", "佳木斯", "吉安", "江门", "焦作", "嘉兴", "嘉义", "嘉峪关", "揭阳", "吉林", "基隆", "济南", "金昌", "晋城", "景德镇", "荆门", "荆州", "金华", "济宁", "晋中", "锦州", "九江", "酒泉", "鸡西", "济源", "开封", "喀什", "克拉玛依", "库尔勒", "奎屯", "昆明", "来宾", "莱芜", "廊坊", "兰州", "拉萨", "乐东", "乐山", "凉山", "连云港", "聊城", "辽阳", "辽源", "丽江", "临沧", "临汾", "临高", "陵水", "临夏", "临沂", "林芝", "丽水", "六安", "六盘水", "柳州", "陇南", "龙岩", "娄底", "漯河", "洛阳", "泸州", "吕梁", "马鞍山", "茂名", "眉山", "梅州", "绵阳", "苗栗", "米泉", "牡丹江", "南昌", "南充", "南京", "南宁", "南平", "南通", "南投", "南阳", "内江", "那曲", "宁波", "宁德", "怒江", "盘锦", "攀枝花", "澎湖", "平顶山", "屏东", "平凉", "萍乡", "莆田", "濮阳", "黔东", "潜江", "黔南", "黔西", "青岛", "庆阳", "清远", "秦皇岛", "钦州", "琼海", "琼中", "齐齐哈尔", "七台河", "泉州", "曲靖", "衢州", "日喀则", "日照", "三门峡", "三明", "三亚", "厦门", "上海", "商洛", "商丘", "上饶", "山南", "汕头", "汕尾", "韶关", "绍兴", "邵阳", "神农架", "沈阳", "深圳", "石河子", "石家庄", "十堰", "石嘴山", "双鸭山", "朔州", "思茅", "四平", "松原", "绥化", "遂宁", "随州", "宿迁", "苏州", "宿州", "塔城", "泰安", "台北", "台北", "台东", "台南", "台南", "太原", "台中", "台中", "泰州", "台州", "唐山", "桃园", "天津", "天门", "天水", "铁岭", "铜川", "通化", "通辽", "铜陵", "铜仁", "吐鲁番", "图木舒克", "屯昌", "万宁", "潍坊", "威海", "渭南", "文昌", "文山", "温州", "乌海", "武汉", "芜湖", "五家渠", "乌兰察布", "乌鲁木齐", "乌苏", "武威", "无锡", "五指山", "吴忠", "梧州", "西安", "襄樊", "香港", "湘潭", "湘西", "咸宁", "仙桃", "咸阳", "孝感", "锡林郭勒", "兴安", "邢台", "西宁", "新乡", "信阳", "新余", "忻州", "新竹", "新竹", "西双版纳", "宣城", "许昌", "徐州", "雅安", "延安", "延边", "盐城", "阳江", "阳泉", "扬州", "烟台", "宜宾", "宜昌", "伊春", "宜春", "宜兰", "银川", "营口", "鹰潭", "伊宁", "益阳", "永州", "岳阳", "榆林", "玉林", "运城", "云浮", "云林", "玉树", "玉溪", "枣庄", "长春", "彰化", "张家界", "张家口", "长沙", "张掖", "长治", "漳州", "湛江", "肇庆", "昭通", "郑州", "镇江", "重庆", "中山", "中卫", "周口", "舟山", "珠海", "驻马店", "株洲", "淄博", "自贡", "资阳", "遵义"</string>

    <string name="position">"0":"全部","1":"编剧","2":"摄影","3":"后期制作","4":"影视配音","5":"道具","6":"化妆","7":"导演","8":"灯光","9":"助理","10":"填词作曲","11":"编曲","12":"录音","13":"乐手","14":"唱片制作","15":"音乐配音","16":"后期制作","17":"音效","18":"临时演员","19":"Dancer","20":"Singer","21":"魔术","22":"主持人","23":"模特礼仪","24":"DJ","25":"杂技","26":"演讲","27":"钢琴","28":"指挥家","29":"小提琴","30":"芭蕾舞","31":"国标舞","32":"管弦乐","33":"声乐视唱","34":"打击乐","35":"吉他","36":"民族乐器","37":"其他"</string>

    <string name="title_activity_add_resume">AddResumeActivity</string>
    <string name="title_activity_oneself_experience">OneselfExperienceActivity</string>
    <string name="title_activity_production_resume">ProductionResumeActivity</string>
    <string name="title_activity_add_picture">AddPictureActivity</string>
    <string name="title_activity_add_video">AddVideoActivity</string>
    <string name="title_activity_add_music">AddMusicActivity</string>
    <string name="title_activity_add_music_production">AddMusicProductionActivity</string>
    <string name="title_activity_resume_particulars">ResumeParticularsActivity</string>
    <string name="title_activity_merchant_deliver">MerchantDeliverActivity</string>
    <string name="title_activity_merchant_invite">MerchantInviteActivity</string>
    <string name="title_activity_merchant_information">MerchantInformationActivity</string>
    <string name="title_activity_merchant_information_preview">MerchantInformationPreviewActivity
    </string>
    <string name="title_activity_applications_list">ApplicationsListActivity</string>
    <string name="title_activity_add_merchant">AddMerchantActivity</string>
    <string name="title_activity_merchant_particulars">MerchantParticularsActivity</string>
    <string name="title_activity_modification_resume">ModificationResumeActivity</string>
    <string name="title_activity_contact_information">ContactInformationActivity</string>

    <string name="sunday">日</string>
    <string name="monday">一</string>
    <string name="thesday">二</string>
    <string name="wednesday">三</string>
    <string name="thursday">四</string>
    <string name="friday">五</string>
    <string name="saturday">六</string>
    <string name="title_activity_more_video">MoreVideoActivity</string>
    <string name="title_activity_more_mucis">MoreMucisActivity</string>
    <string name="title_activity_more_picture">MorePictureActivity</string>
    <string name="title_activity_image_pager">ImagePagerActivity</string>
    <string name="title_activity_merchar_invite_particulars">MercharInviteParticularsActivity
    </string>
    <string name="title_activity_comment_count">CommentCountActivity</string>
    <string name="title_activity_merchant_add_pictrue">MerchantAddPictrueActivity</string>
    <string name="title_activity_photo_browse">PhotoBrowse</string>
    <string name="title_activity_image_pager_be">ImagePagerBeActivity</string>
    <string name="title_activity_bound_accouns">BoundAccounsActivity</string>
    <string name="title_activity_abouy_message">AbouyMessageActivity</string>
</resources>
