<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--<com.example.view.MyView-->
    <!--xmlns:my="http://schemas.android.com/apk/res/com.example.view.MyView"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content" />-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/ic_white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#00f6f1ea">

            <LinearLayout
                android:id="@+id/btnPreMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00ffffff"
                    android:paddingBottom="2dp"
                    android:scaleY="1.6"
                    android:text="＜"
                    android:textColor="#B5B8BB"
                    android:textSize="20sp" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00ffffff"
                    android:text="上个月"
                    android:textColor="#B5B8BB"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnNextMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="0dp"
                    android:background="#00ffffff"
                    android:text="下个月"
                    android:textColor="#B5B8BB"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00ffffff"
                    android:paddingBottom="1dp"
                    android:scaleY="1.6"
                    android:text="＞"
                    android:textColor="#B5B8BB"
                    android:textSize="20sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvCurrentMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:text="2015年11月"
                android:textColor="#626466"
                android:textSize="20sp" />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-2dp"
            android:layout_marginRight="-2dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/week_back_shape"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:paddingTop="10dp">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="20dip"
                android:layout_marginBottom="0dip"
                android:layout_marginTop="0dip">

                <TableRow>

                    <TextView
                        style="@style/dateStyle"
                        android:text="@string/sunday"
                        android:textColor="@color/canlendar_text_color" />

                    <TextView
                        style="@style/dateStyle"
                        android:text="@string/monday"
                        android:textColor="@color/canlendar_text_color" />

                    <TextView
                        style="@style/dateStyle"
                        android:text="@string/thesday"
                        android:textColor="@color/canlendar_text_color" />

                    <TextView
                        style="@style/dateStyle"
                        android:text="@string/wednesday"
                        android:textColor="@color/canlendar_text_color" />

                    <TextView
                        style="@style/dateStyle"
                        android:text="@string/thursday"
                        android:textColor="@color/canlendar_text_color" />

                    <TextView
                        style="@style/dateStyle"
                        android:text="@string/friday"
                        android:textColor="@color/canlendar_text_color" />

                    <TextView
                        style="@style/dateStyle"
                        android:text="@string/saturday"
                        android:textColor="@color/canlendar_text_color" />
                </TableRow>
            </TableLayout>
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">

                    <android.support.v4.view.ViewPager
                        android:id="@+id/vp_calendar"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_gravity="center"
                        android:background="#00000000"></android.support.v4.view.ViewPager>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="0dp"
                    android:text="点击日历设置邀约状态"
                    android:textColor="#B3B5B9"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="0dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="18sp"
                            android:layout_height="18sp"
                            android:layout_marginBottom="0dp"
                            android:background="@drawable/green_dot_shape" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2sp"
                            android:gravity="center_vertical"
                            android:text="红色状态表示没空"
                            android:textColor="#B3B5B9"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/calendar_tips_ll"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="0dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="18sp"
                            android:layout_height="18sp"
                            android:background="@drawable/yellow_dot_shape" />

                        <TextView
                            android:id="@+id/calendar_tips_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2sp"
                            android:gravity="center_vertical"
                            android:text="黄色状态为邀约日期"
                            android:textColor="#B3B5B9"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/calendar_tips_tips_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="0dp"
                        android:text="（提示:需提前一天邀约）"
                        android:textColor="#B3B5B9"
                        android:textSize="13sp" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/calendar_confirm_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/calendar_button_shape"
            android:onClick="offer"
            android:text="确定"
            android:textColor="#FFF0F0"
            android:textSize="18sp"
            android:visibility="visible" />


    </LinearLayout>

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</RelativeLayout>